typescript/checker/tests/conformance/es6/Symbols/symbolType4.ts.stderr
error: UpdateOpToSymbol {
    span: Span {
        lo: BytePos(
            46,
        ),
        hi: BytePos(
            47,
        ),
        ctxt: #0,
    },
    op: "++",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType4.ts:3:1
  |
3 | s++;
  | ^

error: UpdateOpToSymbol {
    span: Span {
        lo: BytePos(
            51,
        ),
        hi: BytePos(
            52,
        ),
        ctxt: #0,
    },
    op: "--",
}
 --> $DIR/tests/conformance/es6/Symbols/symbolType4.ts:4:1
  |
4 | s--;
  | ^

